--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -651,6 +651,9 @@
                         <TextBlock Text="Дата заключения договора" Style="{StaticResource DetailLabelStyle}"/>
                         <TextBlock Text="{Binding SelectedDebtor.Date}" Style="{StaticResource DetailValueStyle}"/>
 
+                        <TextBlock Text="Добавил:" Style="{StaticResource DetailLabelStyle}"/>
+                        <TextBlock Text="{Binding SelectedDebtor.AddedByEmployeeName}" Style="{StaticResource DetailValueStyle}"/>
+
                         <!-- Кнопки действий -->
                         <Button Content="Сгенерировать договор" 
                                 Command="{Binding GenerateContractCommand}" 
